# agent-frontend-template

./: README.md  SETUP.md  pyproject.toml  run_chainlit.py  run_gradio.py  test_setup.py
src/: constants.py  main.py
src/agent/: agent.py  langgraph_agent.py  langgraph_tools.py  openai_agent_sdk.py  prompts.py  tools.py
src/chainlit_chat/: chainlit_interface.py
src/gradio_chat/: gradio_app.py  gradio_interface.py
src/interface/: gradio_app.py  gradio_interface.py
src/utils/: validation.py
